--- a/src/components/Locations.css
+++ b/src/components/Locations.css
@@ -1,10 +1,4 @@
-body {
-    margin: 0;
-    background-color: #447989;
-    font-family: "Arial", sans-serif;
-}
-
-.episode {
+.location {
     margin-bottom: 5px;
     padding: 10px 40px;
     border-radius: 10px;
@@ -12,13 +6,13 @@ body {
     color: #3c2626;
 }
 
-.characters-container {
+.residents-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;;
+    justify-content: space-between;
 }
 
-.character {
+.resident {
     width: 300px;
     height: 140px;
     border: 1px solid #3c2626;
@@ -29,30 +23,30 @@ body {
     color: #3c2626;
 }
 
-.character-alive {
+.resident-alive {
     background-color: #c7f0db;
 }
-.character-dead {
+.resident-dead {
     background-color: #f0c7c7;
 }
-.character-unknown {
+.resident-unknown {
     background-color: #ffffff;
 }
 
-.character-left {
+.resident-left {
     flex: 2;
 }
 
-.character-left img {
+.resident-left img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.character-right {
+.resident-right {
     flex: 3;
     padding: 5px 10px;
 }
-.character-right h3 {
+.resident-right h3 {
     margin: 5px 0;
 }
